@@ -59,8 +59,8 @@ matcherRequire  : matcher                                                  #matc
                 ;
 
 matcher         : basePath                                                      #matcherPath
-//                | 'Concat' BLOCKOPEN VALUE SEMICOLON matcher BLOCKCLOSE         #matcherConcat1
-//                | 'Concat' BLOCKOPEN matcher SEMICOLON VALUE BLOCKCLOSE         #matcherConcat2
+                | 'Concat' BLOCKOPEN prefix=VALUE SEMICOLON matcher BLOCKCLOSE  #matcherConcatPrefix
+                | 'Concat' BLOCKOPEN matcher SEMICOLON postfix=VALUE BLOCKCLOSE #matcherConcatPostfix
                 | 'NormalizeBrand' BLOCKOPEN matcher BLOCKCLOSE                 #matcherNormalizeBrand
                 | 'CleanVersion'   BLOCKOPEN matcher BLOCKCLOSE                 #matcherCleanVersion
                 | 'LookUp'         BLOCKOPEN lookup=VALUENAME SEMICOLON matcher (SEMICOLON defaultValue=VALUE )? BLOCKCLOSE #matcherPathLookup
