@@ -23,6 +23,8 @@ import nl.basjes.parse.useragent.parser.UserAgentTreeWalkerBaseVisitor;
 import nl.basjes.parse.useragent.parser.UserAgentTreeWalkerLexer;
 import nl.basjes.parse.useragent.parser.UserAgentTreeWalkerParser;
 import nl.basjes.parse.useragent.parser.UserAgentTreeWalkerParser.MatcherBaseContext;
+import nl.basjes.parse.useragent.parser.UserAgentTreeWalkerParser.MatcherConcatPrefixContext;
+import nl.basjes.parse.useragent.parser.UserAgentTreeWalkerParser.MatcherConcatPostfixContext;
 import nl.basjes.parse.useragent.parser.UserAgentTreeWalkerParser.MatcherNormalizeBrandContext;
 import nl.basjes.parse.useragent.parser.UserAgentTreeWalkerParser.MatcherRequireContext;
 import nl.basjes.parse.useragent.parser.UserAgentTreeWalkerParser.MatcherWordRangeContext;
@@ -228,6 +230,18 @@ public abstract class MatcherAction implements Serializable {
         }
 
         @Override
+        public Void visitMatcherConcatPrefix(MatcherConcatPrefixContext ctx) {
+            unQuoteToken(ctx.prefix);
+            return super.visitMatcherConcatPrefix(ctx);
+        }
+
+        @Override
+        public Void visitMatcherConcatPostfix(MatcherConcatPostfixContext ctx) {
+            unQuoteToken(ctx.postfix);
+            return super.visitMatcherConcatPostfix(ctx);
+        }
+
+        @Override
         public Void visitStepEqualsValue(StepEqualsValueContext ctx) {
             unQuoteToken(ctx.value);
             return super.visitStepEqualsValue(ctx);
@@ -351,6 +365,12 @@ public abstract class MatcherAction implements Serializable {
         }
         if (tree instanceof MatcherWordRangeContext){
             return calculateInformPath(treeName, ((MatcherWordRangeContext) tree).matcher());
+        }
+        if (tree instanceof MatcherConcatPrefixContext){
+            return calculateInformPath(treeName, ((MatcherConcatPrefixContext) tree).matcher());
+        }
+        if (tree instanceof MatcherConcatPostfixContext){
+            return calculateInformPath(treeName, ((MatcherConcatPostfixContext) tree).matcher());
         }
         return 0;
     }
