@@ -172,3 +172,4 @@ v3.2
 - Detect Chromium, SugarLabs, Ubuntu Touch
 - Detect few more robots
 - New matching language feature: Is this value present in a predefined set of values?
+- New matching language feature: Basic String concatenation
